--- a/packages/subgraph/src/subgraph.template.yaml
+++ b/packages/subgraph/src/subgraph.template.yaml
@@ -3,11 +3,11 @@ schema:
   file: ./src/schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: YourContract
+    name: IpDid
     network: localhost
     source:
-      address: '{{YourContractAddress}}'
-      abi: YourContract
+      address: '{{IpDidAddress}}'
+      abi: IpDid
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -17,8 +17,8 @@ dataSources:
         - Purpose
         - Sender
       abis:
-        - name: YourContract
-          file: ./abis/YourContract.json
+        - name: IpDid
+          file: ./abis/IpDid.json
       eventHandlers:
         - event: SetPurpose(address,string)
           handler: handleSetPurpose
