--- a/packages/universal-resolver-driver/package.json
+++ b/packages/universal-resolver-driver/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "axios": "^0.21.1",
     "ethers": "^5.1.3",
     "koa": "^2.13.1"
