--- a/packages/universal-resolver-driver/.env.example
+++ b/packages/universal-resolver-driver/.env.example
@@ -1,2 +1,3 @@
 uniresolver_driver_did_tw_provider=https://dev-testnet-v1-1.skalelabs.com
 uniresolver_driver_did_tw_contract_address=0x110516Dc490F276C41C98D0f348B37C3AC192221
+skale_private_key=your_private_key
