--- a/packages/universal-resolver-driver/package.json
+++ b/packages/universal-resolver-driver/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.3",
-    "koa": "^2.13.1"
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0"
   }
 }
