--- a/packages/universal-resolver-driver/package.json
+++ b/packages/universal-resolver-driver/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.3",
+    "ipfs-http-client": "^49.0.4",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0"
   }
