--- a/packages/universal-resolver-driver/package.json
+++ b/packages/universal-resolver-driver/package.json
@@ -2,8 +2,9 @@
   "name": "universal-resolver-driver",
   "version": "1.0.0",
   "description": "",
-  "main": "driver.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
